--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "talks",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite dev",
-    "build": "vite build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "vite": "^4.5.0",
-    "vite-plugin-react-deck": "^1.0.8"
-  },
-  "dependencies": {
-    "@gpichot/spectacle-deck": "^1.1.5",
-    "@mdx-js/react": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "spectacle": "^10.1.7"
-  }
+	"name": "talks",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "vite dev",
+		"build": "vite build"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@vitejs/plugin-react-swc": "^3.8.0",
+		"vite": "^5.0.0",
+		"vite-plugin-cdn-import": "^1.0.1",
+		"vite-plugin-react-deck": "^1.1.5"
+	},
+	"dependencies": {
+		"@gpichot/spectacle-deck": "^1.2.11",
+		"@mdx-js/react": "^3.1.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-latex": "^2.0.0",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
+		"spectacle": "^10.1.8"
+	}
 }
